# example-simpleworkflow

./: .gitignore  README.md  pyproject.toml
make_workflow/: Makefile
make_workflow/output/results/: correlation_matrix.csv
make_workflow/scripts/: compute_correlation.py  filter_data.py  generate_heatmap.py  join_data.py
snakemake_workflow/: .dockerignore  Dockerfile  Makefile  Snakefile  read_file_metadata.py  simple_workflow.py
snakemake_workflow/config/: config.yaml
snakemake_workflow/envs/: simple.yml
snakemake_workflow/scripts/: compute_correlation.py  filter_data.py  generate_heatmap.py  join_data.py
