[project]
name = "example-simpleworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defopt>=7.0.0",
    "fastcluster>=1.3.0",
    "ipython>=9.8.0",
    "makeprov[snakemake]>=0.4.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "snakemake>=9.14.5",
]
